--- a/playbooks/tasks/google-chrome.yaml
+++ b/playbooks/tasks/google-chrome.yaml
@@ -1,9 +1,9 @@
-- name: Import Google Chrome GPG key
+- name: Importing Google Chrome GPG key
   become: yes
   rpm_key:
     key: https://dl.google.com/linux/linux_signing_key.pub
     state: present
-- name: Add Google Chrome repository
+- name: Adding Google Chrome repository
   become: yes
   yum_repository:
     name: google-chrome
@@ -12,11 +12,9 @@
     enabled: yes
     gpgcheck: yes
     gpgkey: https://dl.google.com/linux/linux_signing_key.pub
-- name: Install Google Chrome
+- name: Installing Google Chrome
   become: yes
   dnf:
     name: google-chrome-stable
     state: latest
-- name: Set Google Chrome as default web application
-  command: xdg-mime default google-chrome.desktop x-scheme-handler/http text/html text/xml application/xhtml_xml image/webp x-scheme-handler/https x-scheme-handler/ftp
-  when: google_chrome.default
+
