--- a/playbooks/tasks/yarn.yaml
+++ b/playbooks/tasks/yarn.yaml
@@ -1,9 +1,9 @@
-- name: Install Yarn repository
+- name: Adding Yarn repository
   become: yes
   get_url:
     url: https://dl.yarnpkg.com/rpm/yarn.repo
     dest: /etc/yum.repos.d/yarn.repo
-- name: Install Yarn
+- name: Installing Yarn
   become: yes
   dnf:
     name: yarn
