--- a/data/powerline-config.json
+++ b/data/powerline-config.json
@@ -1,7 +1,15 @@
 {
+  "common": {
+		"term_truecolor": false
+	},
   "ext": {
-      "shell": {
-          "theme": "default_leftonly"
-      }
+    "shell": {
+			"colorscheme": "default",
+			"theme": "default_leftonly",
+			"local_themes": {
+				"continuation": "continuation",
+				"select": "select"
+			}
+		}
   }
 }
