--- a/data/vscode-settings.json
+++ b/data/vscode-settings.json
@@ -1,17 +1,26 @@
 {
   "telemetry.enableTelemetry": false,
   "telemetry.enableCrashReporter": false,
-  "workbench.colorTheme": "Material Theme Darker High Contrast",
   "editor.fontFamily": "Fira Code Light",
   "editor.fontSize": 15,
   "editor.fontLigatures": true,
   "terminal.integrated.fontFamily": "Fira Code Light",
   "terminal.integrated.fontSize": 15,
   "git.confirmSync": false,
-  "files.autoSave": "off",
-  "window.titleBarStyle": "custom",
+  "breadcrumbs.enabled": true,
+  "extensions.ignoreRecommendations": false,
   "workbench.iconTheme": "eq-material-theme-icons",
+  "javascript.updateImportsOnFileMove.enabled": "never",
+  "workbench.startupEditor": "newUntitledFile",
   "php.suggest.basic": false,
+  "window.titleBarStyle": "custom",
   "gitlens.views.fileHistory.location": "scm",
-  "gitlens.views.lineHistory.location": "scm"
+  "workbench.colorTheme": "GitHub Dark",
+  "kickassembler.assemblerJar": "/home/milan/bin/KickAssembler/KickAss.jar",
+  "kickassembler.emulatorRuntime": "/usr/bin/x64",
+  "kickassembler.javaRuntime": "/usr/bin/java",
+  "kickassembler.outputDirectory": "build",
+  "kickassembler.debuggerRuntime": "/home/milan/bin/C64-65XE-Debugger/c64debugger",
+  "kickassembler.debuggerOptions": "-wait 3000 -autojmp",
+  "editor.renameOnType": true
 }
