--- a/playbooks/tasks/typora.yaml
+++ b/playbooks/tasks/typora.yaml
@@ -1,4 +1,4 @@
-- name: Prepare to install Typora
+- name: Preparing to install Typora
   file:
     path: "{{ansible_env.HOME}}/{{item}}"
     recurse: yes
@@ -6,12 +6,12 @@
   loop:
     - bin
     - .local/share/applications
-- name: Install Typora
+- name: Installing Typora
   unarchive:
     src: "https://typora.io/linux/Typora-linux-x64.tar.gz"
     remote_src: yes
-    dest: "{{ansible_env.HOME}}/bin"
-- name: Add Typora to applications
+    dest: "{{ansible_env.HOME}}"
+- name: Creating Typora desktop entry
   copy:
     dest: "{{ansible_env.HOME}}/.local/share/applications/typora.desktop"
     content: |
