--- a/playbooks/fedora-post-install.yaml
+++ b/playbooks/fedora-post-install.yaml
@@ -21,6 +21,7 @@
       - gthumb
       - celluloid
       - tilix
+      - gnome-extensions-app
     flathub:
       - com.getpostman.Postman
       - com.github.johnfactotum.Foliate
