--- a/playbooks/fedora-post-install.yaml
+++ b/playbooks/fedora-post-install.yaml
@@ -141,3 +141,4 @@
     - include: tasks/microsoft-edge.yaml
     - include: tasks/virtualbox.yaml
     - include: tasks/aseprite.yaml
+    - include: tasks/kick-assembler.yaml
