--- a/playbooks/fedora-post-install.yaml
+++ b/playbooks/fedora-post-install.yaml
@@ -22,6 +22,7 @@
       - celluloid
       - tilix
       - gnome-extensions-app
+      - vice
     flathub:
       - com.getpostman.Postman
       - com.github.johnfactotum.Foliate
