--- a/playbooks/tasks/vscode.yaml
+++ b/playbooks/tasks/vscode.yaml
@@ -26,7 +26,7 @@
     recurse: yes
     state: directory
 - name: Configuring Visual Studio Code
-  copy:
+  template:
     src: "{{playbook_dir}}/../data/vscode-settings.json"
     dest: "{{ansible_env.HOME}}/.config/Code/User/settings.json"
 
