--- a/data/vscode-settings.json
+++ b/data/vscode-settings.json
@@ -17,7 +17,7 @@
   "gitlens.views.fileHistory.location": "scm",
   "workbench.colorTheme": "GitHub Dark",
   "kickassembler.assemblerJar": "{{ansible_env.HOME}}/bin/KickAssembler/KickAss.jar",
-  "kickassembler.emulatorRuntime": "/usr/bin/x64",
+  "kickassembler.emulatorRuntime": "/usr/bin/x64sc",
   "kickassembler.javaRuntime": "/usr/bin/java",
   "kickassembler.outputDirectory": "build",
   "kickassembler.debuggerRuntime": "{{ansible_env.HOME}}/bin/C64-65XE-Debugger/c64debugger",
